# senmo_writing_project

./: .gitignore
pen-pal/src/: CMakeCache.txt  CMakeLists.txt  jointinput.csv  utilities.cpp
pen-pal/src/300-Controller_Wrapper/: 100-24-word-trajectory.cpp  101-save-trajectories.cpp  105-Pen-Pal-Demonstration.cpp  KortexRobot.cpp  KortexRobot.hpp
pen-pal/src/Coordinates/: 1.csv  1.xlsx  10.csv  10.xlsx  11.csv  11.xlsx  2.csv  2.xlsx  3.csv  3.xlsx  4.csv  4.xlsx  5.csv  5.xlsx  6.csv  6.xlsx  7.csv  7.xlsx  8.csv  8.xlsx  9.csv  9.xlsx  xlsxtocsv.py
pen-pal/src/helper_libraries/kinematics/: CMakeLists.txt  package.xml
pen-pal/src/helper_libraries/kinematics/config/: kuka_lbr.yaml
pen-pal/src/helper_libraries/kinematics/include/kinematics/: eigen_support.h  fir_filter.h  fkin.h  iir_filter.h  ikin.h  kin.h  safety.h
pen-pal/src/helper_libraries/kinematics/launch/: kuka_lbr.launch.py
pen-pal/src/helper_libraries/kinematics/src/: eigen_support.cpp  fir_filter.cpp  fkin.cpp  iir_filter.cpp  ikin.cpp  kin.cpp  robot_param_server.cpp  safety.cpp  test.cpp
